--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^5.10.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
+  },
+  "engines": {
+    "node": "v13.14.0"
   }
 }
